--- a/Exercice1.html
+++ b/Exercice1.html
@@ -23,7 +23,7 @@
         <tr>
           <td><b>Votre Sexe:</b></td>
           <td>
-            <input type="radio" name="sexe" /><b>Mascullin</b>
+            <input type="radio" name="sexe" checked /><b>Mascullin</b>
             <input type="radio" name="sexe" /><b>feminin</b>
           </td>
         </tr>
