--- a/Exercice3.html
+++ b/Exercice3.html
@@ -11,8 +11,8 @@
         <input type="radio" name="sexe" /><b>Femme</b>
         <br />
         <br />
-        <input type="checkbox" /> <b>Oui, je suis une societe Nom societe : </b
-        ><input type="text" />
+        <input type="checkbox" />
+        <b>Oui, je suis une societe Nom societe : </b><input type="text" />
         <br />
         <br />
         <b>Titre Profil* : </b><input type="text" size="50px" />
@@ -50,12 +50,12 @@
         <br />
         <b>Liste de vos Competences*:</b> <br />
         <textarea rows="4" cols="22">
-         javascript/MySQL Senior Dev-Movil Debuttant
+        javascript/MySQL Senior Dev-Movil Debuttant
       </textarea
         >
         <br />
         <br />
-        <input type="button" value="Valider" />
+        <input type="submit" value="Valider" />
       </fieldset>
     </form>
   </body>
