--- a/Exercice1.html
+++ b/Exercice1.html
@@ -14,11 +14,11 @@
         </tr>
         <tr>
           <td><b>Votre Prenom :</b></td>
-          <td><input type="text" name="nom" /></td>
+          <td><input type="text" name="prenom" /></td>
         </tr>
         <tr>
           <td><b>Votre Age :</b></td>
-          <td><input type="text" name="nom" /></td>
+          <td><input type="text" name="Age" /></td>
         </tr>
         <tr>
           <td><b>Votre Sexe:</b></td>
