--- a/Exercice2.html
+++ b/Exercice2.html
@@ -18,37 +18,37 @@
         <tr>
           <td align="right">Nom :</td>
           <td>
-            <input type="text" />
+            <input type="text" name="nom" />
           </td>
         </tr>
         <tr>
           <td align="right">Prenom :</td>
           <td>
-            <input type="text" />
+            <input type="text" name="prenom" />
           </td>
         </tr>
         <tr>
           <td align="right">Age :</td>
           <td>
-            <input type="text" />
+            <input type="text" name="Age" />
           </td>
         </tr>
         <tr>
           <td align="right">Pseudo :</td>
           <td>
-            <input type="text" />
+            <input type="text" name="pseudo" />
           </td>
         </tr>
         <tr>
           <td align="right">Mot de pass :</td>
           <td>
-            <input type="password" />
+            <input type="password" name="" />
           </td>
         </tr>
         <tr>
           <td align="right">Mot de pass (Confirmation) :</td>
           <td>
-            <input type="password" />
+            <input type="password" name="passwordConfirmation" />
           </td>
         </tr>
         <tr>
